# fastapi-crud

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  linter.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/: main.py
src/core/: config.py  http_server.py
src/data/: posts_data.py  schemas.py
src/infra/: database.py  models.py
src/models/: post.py
src/routes/: posts_routes.py  root_routes.py
src/services/: posts_services.py
src/tests/: test_posts_routes.py  test_posts_services.py  test_root_routes.py
